distancia y cinepolis respaldo

--- a/templates/distancia.html
+++ b/templates/distancia.html
@@ -22,10 +22,9 @@
             <label for="y2" class="form-label">y2:</label>
             <input type="number" step="any" class="form-control" id="y2" name="y2" required>
         </div>
-    </form>
 
  <button type="submit" class="btn btn-primary w-100">Calcular</button>
- <div class="mb-3">
+    </form> <div class="mb-3">
         <h4>La distancia es: {{ resultado }}</h4>
 </div>
 
