--- a/templates/layout.html
+++ b/templates/layout.html
@@ -48,6 +48,16 @@
     </div>
   </div>
 </nav>
+
+<div class="container mt-5 pt-4">
+{% with message in messages %}
+
+<div class="alrt alert-success ">
+  {{message}}
+</div>
+{%endfor%}
+
+</div>
 <div class="container mt-5 pt-4">
     {%block content %}
     {%endblock%}
